apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lidarr
          image: 11notes/lidarr:2.14.5@sha256:3dea7bda17ae7306576fedec9b4267556e376b663e56b8403d30e7e0a7c5266c
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8686
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /lidarr/etc
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: servarr-servarr-lidarr
        - name: media
          persistentVolumeClaim:
            claimName: servarr-jellyfin-media
        - name: tmp
          emptyDir:
            medium: Memory
