apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: http
      protocol: TCP
